added constrain to viewport (fixes #46)

--- a/lib/components/fo_text_input/fo_text_input_component.html
+++ b/lib/components/fo_text_input/fo_text_input_component.html
@@ -38,6 +38,7 @@
   <fo-dropdown-list *ngIf="options != null && value?.isEmpty == false && dropdownVisible"
                     [options]="options"
                     [filter]="value"
+                    [constrainToViewPort]="constrainToViewPort"
                     [width]="dropdownWidth"
                     (select)="onFilterSelect($event)"
                     [(visible)]="dropdownVisible">
