--- a/lib/components/fo_text_input/fo_textarea_input_component.html
+++ b/lib/components/fo_text_input/fo_textarea_input_component.html
@@ -1,7 +1,6 @@
 <fo-label [value]="label"
           [error]="control?.valid == false && control?.pristine != true">
-  <textarea #textArea
-            class="gray-color-bright"
+  <textarea class="gray-color-bright"
             [disabled]="disabled"
             [placeholder]="placeholder"
             noresize
