--- a/lib/components/fo_button/fo_button_component.html
+++ b/lib/components/fo_button/fo_button_component.html
@@ -2,8 +2,8 @@
         class="themeable background-color-primary"
         (click)="onClick()">
   <span *ngIf="label != null">{{label}}</span>
-  <material-icon *ngIf="icon != null"
-                 [icon]="icon"                 
-                 baseline>
-  </material-icon>
+  <fo-icon *ngIf="icon != null"
+           [icon]="icon"
+           [material]="materialIcon">
+  </fo-icon>
 </button>
