--- a/lib/components/fo_text_input/fo_text_input_component.html
+++ b/lib/components/fo_text_input/fo_text_input_component.html
@@ -1,9 +1,10 @@
 <fo-label [value]="label"
           [error]="control?.valid == false && control?.pristine != true">
   <div id="flexContainer">
-    <material-icon *ngIf="leadingIcon != null"
-                   class="gray-color leading"
-                   [icon]="leadingIcon"></material-icon>
+    <fo-icon *ngIf="leadingIcon != null"
+             class="gray-color leading"
+             [icon]="leadingIcon"
+             [material]="materialIcons"></fo-icon>
     <input class="roundLeft gray-color-bright"
            type="{{type}}"
            [autoFocus]="autoFocus"
@@ -19,11 +20,12 @@
            (keyup)="onKeyUp($event)"
            (focus)="onFocus($event)"
            (blur)="onBlur($event)">
-    <material-icon *ngIf="clearIcon == true && value?.isEmpty == false"
-                   size="large"
-                   class="color-alert clear"
-                   icon="cancel"
-                   (click)="onClear($event)"></material-icon>
+    <fo-icon *ngIf="clearIcon == true && value?.isEmpty == false"
+             size="large"
+             class="color-alert clear"
+             icon="cancel"
+             [material]="true"
+             (click)="onClear($event)"></fo-icon>
     <fo-button *ngIf="actionButtonLabel != null"
                [label]="actionButtonLabel"
                noLeftBorder
@@ -38,6 +40,7 @@
                     [options]="options"
                     [filter]="value"
                     [constrainToViewPort]="constrainToViewPort"
+                    [materialIcons]="materialIcons"
                     [width]="dropdownWidth"
                     (select)="onFilterSelect($event)"
                     [(visible)]="dropdownVisible">
