--- a/lib/components/fo_text_input/_mixins.scss
+++ b/lib/components/fo_text_input/_mixins.scss
@@ -35,7 +35,7 @@
       @include fo-button-font-size($size);
     }
 
-    @include dropdown-list-font-size($size);
+    @include fo-dropdown-list-font-size($size);
   }
 
   ::ng-deep fo-textarea-input {
