--- a/lib/components/fo_text_input/fo_textarea_input_component.html
+++ b/lib/components/fo_text_input/fo_textarea_input_component.html
@@ -3,6 +3,7 @@
   <textarea class="gray-color-bright"
             [disabled]="disabled"
             [placeholder]="placeholder"
+            [class.color-alert]="control?.valid == false && control?.pristine != true"
             noresize
             (focus)="hasFocus = true"
             (blur)="hasFocus = false"
