--- a/lib/_mixins.scss
+++ b/lib/_mixins.scss
@@ -7,6 +7,7 @@ $transitionSpeed: 0.3s ease;
 @import 'components/fo_button/mixins';
 @import 'components/fo_file_upload/mixins';
 @import 'components/fo_image_file/mixins';
+@import 'components/fo_dropdown_list/mixins';
 @import 'components/fo_dropdown_select_multi/mixins';
 @import 'components/fo_quiz/mixins';
 
@@ -35,18 +36,14 @@ $transitionSpeed: 0.3s ease;
   @include material-toggle-theme($primaryColor);
 
   @include fo-button-colors(white, $primaryColor, $primaryColorBright, $grayColorBright);
-  @include fo-dropdown-select-multi-option-background-color($primaryColor);
+  @include fo-dropdown-list-colors($primaryColor, $grayColorBright);
+  @include fo-dropdown-select-multi-options-background-color($primaryColor);
   @include fo-dropdown-select-multi-options-border-color($grayColor);
   @include fo-file-upload-border-color($grayColor);
   @include fo-image-file-border-color($grayColor);
 
   material-spinner {
     border-color: $primaryColor;
-  }
-
-
-  ::ng-deep fo-dropdown-option:hover {
-    background-color: $primaryColor;
   }
 
   ::ng-deep fo-tab-panel {
