--- a/lib/_mixins.scss
+++ b/lib/_mixins.scss
@@ -9,6 +9,7 @@ $transitionSpeed: 0.3s ease;
 @import 'components/fo_image_file/mixins';
 @import 'components/fo_dropdown_list/mixins';
 @import 'components/fo_dropdown_select_multi/mixins';
+@import 'components/fo_modal/mixins';
 @import 'components/fo_quiz/mixins';
 
 @mixin foregroundColor($color) {
@@ -41,9 +42,17 @@ $transitionSpeed: 0.3s ease;
   @include fo-dropdown-select-multi-options-border-color($grayColor);
   @include fo-file-upload-border-color($grayColor);
   @include fo-image-file-border-color($grayColor);
+  @include fo-modal-colors(lighten($grayColorBright, 10%));
 
   material-spinner {
     border-color: $primaryColor;
+  }
+
+  ::ng-deep {
+    material-icon>i {
+      margin-bottom: 0 !important;
+
+    }
   }
 
   ::ng-deep fo-tab-panel {
