Removed input colorCount

--- a/lib/components/fo_icon/fo_icon_component.html
+++ b/lib/components/fo_icon/fo_icon_component.html
@@ -3,11 +3,7 @@
                baseline
                [icon]="icon"></material-icon>
 <ng-container *ngIf="material != true">
-  <span *ngIf="colorCount == 1"
-        [class]="iconClass"
-        [style.font-size]="size"></span>
-  <span *ngIf="colorCount > 1"
-        [class]="iconClass">
+  <span [class]="iconClass">
     <span *ngFor="let path of subPaths"
           [class]="path"
           [style.font-size]="size">
