--- a/lib/components/fo_modal/fo_modal_component.scss
+++ b/lib/components/fo_modal/fo_modal_component.scss
@@ -13,6 +13,7 @@
     display: flex;
     justify-content: center;
     align-items: center;    
+    z-index: 999;
 
     div#modalContent {
       @include boxShadow();
