--- a/lib/components/fo_icon/fo_icon_component.html
+++ b/lib/components/fo_icon/fo_icon_component.html
@@ -3,10 +3,10 @@
                baseline
                [icon]="icon"></material-icon>
 <ng-container *ngIf="material != true">
-  <span [class]="iconClass">
+  <span [class]="iconClass"
+        [style.font-size]="size">
     <span *ngFor="let path of subPaths"
-          [class]="path"
-          [style.font-size]="size">
+          [class]="path">
     </span>
   </span>
 </ng-container>
