now properly resizing dropdown option icon container

--- a/lib/components/fo_dropdown_list/_mixins.scss
+++ b/lib/components/fo_dropdown_list/_mixins.scss
@@ -26,6 +26,11 @@
       table {
         font-size: $size;
         @include material-icon-size($size !important);
+        tr {
+          td.leadingIcon {
+            width: $size * 1.5;
+          }
+        }
       }
     }
   }
