added filteredOptions null check

--- a/lib/components/fo_dropdown_list/fo_dropdown_list_component.html
+++ b/lib/components/fo_dropdown_list/fo_dropdown_list_component.html
@@ -1,4 +1,4 @@
-<fo-dropdown *ngIf="options != null"
+<fo-dropdown *ngIf="options != null && filteredOptions != null"
              [width]="width"
              [constrainToViewPort]="constrainToViewPort"
              [visible]="visible"
