Added offsetTop input

--- a/lib/components/fo_dropdown_list/fo_dropdown_list_component.html
+++ b/lib/components/fo_dropdown_list/fo_dropdown_list_component.html
@@ -1,5 +1,6 @@
 <fo-dropdown *ngIf="options != null && filteredOptions != null"
              [width]="width"
+             [offsetTop]="offsetTop"
              [constrainToViewPort]="constrainToViewPort"
              [visible]="visible"
              (visibleChange)="visibleController.add($event)">
