--- a/lib/_mixins.scss
+++ b/lib/_mixins.scss
@@ -9,8 +9,10 @@ $transitionSpeed: 0.3s ease;
 @import 'components/fo_image_file/mixins';
 @import 'components/fo_dropdown_list/mixins';
 @import 'components/fo_dropdown_select_multi/mixins';
+@import 'components/fo_label/mixins';
 @import 'components/fo_modal/mixins';
 @import 'components/fo_quiz/mixins';
+@import 'components/fo_tab/mixins';
 
 @mixin foregroundColor($color) {
   color: $color;
@@ -42,7 +44,9 @@ $transitionSpeed: 0.3s ease;
   @include fo-dropdown-select-multi-options-border-color($grayColor);
   @include fo-file-upload-border-color($grayColor);
   @include fo-image-file-border-color($grayColor);
+  @include fo-label-color($grayColor);
   @include fo-modal-colors(lighten($grayColorBright, 10%));
+  @include fo-tab-panel-colors(darken($grayColor, $lightstep), $primaryColor);
 
   material-spinner {
     border-color: $primaryColor;
@@ -54,16 +58,7 @@ $transitionSpeed: 0.3s ease;
 
     }
   }
-
-  ::ng-deep fo-tab-panel {
-    div#tabStrip {
-      div.tabButton {
-        color: darken($grayColor, $lightstep);
-        background-color: $primaryColor;
-      }
-    }
-  }
-
+  
   ::ng-deep input::placeholder,
   ::ng-deep textarea::placeholder {
     color: $grayColorBright;
