--- a/lib/components/fo_dropdown/fo_dropdown_component.html
+++ b/lib/components/fo_dropdown/fo_dropdown_component.html
@@ -1,5 +1,6 @@
 <div id="fixer"
      [style.top]="top"
+     [style.right]="right"
      (click)="$event.stopPropagation()"
      *ngIf="visible">
   <div id="dropdownContent"
