Fixed #55 & #56 (broken datatable icons and layout)

--- a/lib/components/fo_data_table/fo_data_table_component.scss
+++ b/lib/components/fo_data_table/fo_data_table_component.scss
@@ -126,6 +126,10 @@ div.table-container {
         material-icon.disabled {
             opacity: 0.3;
         }
+
+        fo-dropdown-select {
+          width: 70px;
+        }
     }
 }
 
