--- a/lib/components/fo_data_table/fo_data_table_component.html
+++ b/lib/components/fo_data_table/fo_data_table_component.html
@@ -36,19 +36,23 @@
               (click)="onSort(cell)">
             <span>{{columns[cell]}}</span>
             <fo-icon [class.hidden]="sortColumn != cell || sortOrder == 'DESC'"
-                     icon="keyboard_arrow_up"></fo-icon>
+                     icon="keyboard_arrow_up"
+                     [material]="true"></fo-icon>
             <fo-icon [class.hidden]="sortColumn != cell || sortOrder == 'ASC'"
-                     icon="keyboard_arrow_down"></fo-icon>
+                     icon="keyboard_arrow_down"
+                     [material]="true"></fo-icon>
           </td>
           <td *ngFor="let cell of evaluatedColumns.keys"
               (click)="onSort(cell)">
             <span>{{cell}}</span>
             <fo-icon size="small"
                      [class.hidden]="sortColumn != cell || sortOrder == 'DESC'"
-                     icon="keyboard_arrow_up"></fo-icon>
+                     icon="keyboard_arrow_up"
+                     [material]="true"></fo-icon>
             <fo-icon size="small"
                      [class.hidden]="sortColumn != cell || sortOrder == 'ASC'"
-                     icon="keyboard_arrow_down"></fo-icon>
+                     icon="keyboard_arrow_down"
+                     [material]="true"></fo-icon>
           </td>
           <td *ngIf="showDeleteButtons"
               class="buttonCell"></td>
@@ -156,11 +160,13 @@
           <fo-icon class="clickable vertical-align-middle"
                    [class.disabled]="disabled || firstIndex <= 0"
                    icon="navigate_before"
+                   [material]="true"
                    (click)="step(-1)">
           </fo-icon> {{msgPage}} {{currentPage}}/{{totalPages}} ({{filteredKeys.length}} {{msgRows}}) <fo-icon
                    class="clickable vertical-align-middle"
                    [class.disabled]="disabled || lastIndex >= filteredKeys.length"
                    icon="navigate_next"
+                   [material]="true"
                    (click)="step(1)">
           </fo-icon>
         </div>
