Added fo-modal-font-size mixin

--- a/lib/components/fo_modal/fo_modal_component.scss
+++ b/lib/components/fo_modal/fo_modal_component.scss
@@ -50,7 +50,7 @@
           }
         }
 
-        @include fo-button-font-size(0.7rem);
+        //@include fo-button-font-size(0.7rem);
 
         fo-button {
           margin-left: $small;
