--- a/lib/components/fo_modal/_mixins.scss
+++ b/lib/components/fo_modal/_mixins.scss
@@ -1,14 +1,38 @@
-@mixin fo-modal-colors($dividerColor) {    
+@import '../fo_button/mixins';
+
+@mixin fo-modal-colors($dividerColor) {
   ::ng-deep fo-modal {
     div#modalOverlay {
       div#modalContent {
-        div#modalHeader, div#modalError, div#modalMain {
+
+        div#modalHeader,
+        div#modalError,
+        div#modalMain {
           border-bottom-color: $dividerColor;
-        }         
+        }
+
         div#modalError {
           background-color: $dividerColor;
         }
       }
-    }    
+    }
+  }
+}
+
+@mixin fo-modal-font-size($size) {
+  ::ng-deep fo-modal {
+    div#modalOverlay {
+      div#modalContent {
+        div#modalHeader {
+          div#modalHeaderTitle {
+            h2 {
+              font-size: $size !important;
+            }
+
+            @include fo-button-font-size($size);
+          }
+        }
+      }
+    }
   }
 }
