improved modal font-size mixin

--- a/lib/components/fo_modal/_mixins.scss
+++ b/lib/components/fo_modal/_mixins.scss
@@ -27,10 +27,9 @@
           div#modalHeaderTitle {
             h2 {
               font-size: $size !important;
-            }
-
-            @include fo-button-font-size($size);
+            }            
           }
+          @include fo-button-font-size(0.6*$size);
         }
       }
     }
