--- a/lib/components/fo_dropdown_select/_mixins.scss
+++ b/lib/components/fo_dropdown_select/_mixins.scss
@@ -11,7 +11,7 @@
     div#flexAligner {
       div#selector {
         font-size: $size;
-        @include material-icon-size($size !important);
+        @include material-icon-size(1.5*$size !important);
   
         div#selectedValue {
           padding: 0.4*$size 0.8*$size !important;
