--- a/lib/components/fo_carousel/fo_carousel_slide_component.scss
+++ b/lib/components/fo_carousel/fo_carousel_slide_component.scss
@@ -2,5 +2,13 @@
     display: inline-block; 
     width: 100%;    
     padding: 0;
-    vertical-align: top;
-} 
+    //vertical-align: top;
+}
+
+:host[top] {
+  vertical-align: top;
+}
+
+:host[bottom] {
+  vertical-align: bottom;
+}
