--- a/lib/components/fo_modal/fo_modal_component.scss
+++ b/lib/components/fo_modal/fo_modal_component.scss
@@ -22,7 +22,7 @@
       background-color: white;
       max-height: 95vh;
       max-width: 90vw;
-      overflow: hidden;
+      //overflow: hidden;
 
       div#modalHeader,
       div#modalFooter {
